[package]
name = "mud-saver"
version = "0.1.1"
authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>", "Thomas Rienößl <t.rioenessl@gmail.com>"]
edition = "2018"

[features]
default = []

embed_ui = ["web-view"]

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
dirs = "2.0.2"
lazy_static = "1.4.0"
rocket = "0.4.4"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
uuid = { version = "0.8", features = ["v4"] }
web-view = { version = "0.5.4", features = ["edge"], optional = true}
zip = "0.5.5"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates", "serve", "json"]