[package]
name = "mud-saver"
version = "0.1.0"
authors = ["Patrick Gantner <patrick.gantner@linesofcode.at>", "Thomas Vauti-Rienößl <t.rioenessl@gmail.com>"]
edition = "2018"

[features]
default = []

embed_ui = ["web-view", "winapi" ]

[dependencies]
actix-files = "0.2.2"
actix-rt = "1.0.0"
actix-web = "2.0"
chrono = { version = "0.4.11", features = ["serde"] }
dirs = "2.0.2"
lazy_static = "1.4.0"
listenfd = "0.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
handlebars = { version = "3.1.0", features = ["dir_source"] }
uuid = { version = "0.8", features = ["v4"] }
web-view = { version = "0.6.3", features = ["edge"], optional = true }
winapi = { version = "0.3.8", features=["synchapi"], optional = true }
zip = "0.5.5"
